- Fixed: Snowman being able to make snow trail on claimed land